# Quarisma

./: .bazelrc  .clang-tidy  .cmake-format.yaml  .lintrunner.toml  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MODULE.bazel  README.md  SECURITY.md  WORKSPACE.bazel  default.profraw  main.py  mypy-strict.ini  mypy.ini  pyproject.toml  run_sanitizer_tests.sh  xsigma_autograd_trace.json
.augment/rules/: ThirdParty.md  builder.md  coding.md  testing.md
.claude/: settings.local.json
.github/cmake/: configure_cache.cmake
.github/workflows/: ci.yml
Cmake/flags/: build_type.cmake  checks.cmake  compile_definitions.cmake  compiler_checks.cmake  platform.cmake
Cmake/tools/: cache.cmake  clang_tidy.cmake  compression.cmake  coverage.cmake  cuda.cmake  dependencies.cmake  enzyme.cmake  experimental.cmake  helper_macros.cmake  hip.cmake  incredibuild.cmake  iwyu.cmake  linker.cmake  logging.cmake  mkl.cmake  numa.cmake  tbb.cmake  (+9 more)
Docs/: .flake8  ASYNC_PARALLEL_DESIGN.md  ASYNC_PARALLEL_EXAMPLES.cpp  ASYNC_PARALLEL_IMPLEMENTATION.md  ASYNC_PARALLEL_PROTOTYPE.h  ASYNC_PARALLEL_QUICK_REFERENCE.md  ASYNC_PARALLEL_README.md  ASYNC_PARALLEL_SUMMARY.md  BAZEL_CONFIGURATION.md  BAZEL_FILES_SUMMARY.txt  BAZEL_USER_GUIDE.md  CUDA_MEMORY_ALLOCATOR_DEEP_DIVE.md  DECISION_MATRIX_AND_NEXT_STEPS.md  EXPLORATION_COMPLETE.md  EXPLORATION_SUMMARY_FOR_USER.md  FINAL_SUMMARY.md  IMPLEMENTATION_CHECKLIST_COMPLETED.md  IMPLEMENTATION_COMPLETE.md  INCREDIBUILD_BUILD_TEST_SUMMARY.md  INCREDIBUILD_BUILD_VERIFICATION.md  INCREDIBUILD_CHANGES_SUMMARY.md  INCREDIBUILD_COMMAND_OUTPUT_LOG.md  INCREDIBUILD_ERROR_HANDLING_DEMO.md  INCREDIBUILD_EXECUTIVE_SUMMARY.md  INCREDIBUILD_FINAL_TEST_REPORT.md  INCREDIBUILD_IMPLEMENTATION_COMPLETE.md  INCREDIBUILD_IMPLEMENTATION_ROADMAP.md  INCREDIBUILD_INTEGRATION_ANALYSIS.md  INCREDIBUILD_TECHNICAL_DETAILS.md  OPTION1_VS_OPTION3_COMPARISON.md  OPTION3_ANALYSIS_INDEX.md  OPTION3_CHANGES_SUMMARY.md  OPTION3_COMPLETE_ANALYSIS.md  OPTION3_COMPLETE_INDEX.md  OPTION3_DETAILED_ANALYSIS.md  OPTION3_FINAL_SUMMARY.md  OPTION3_IMPLEMENTATION_COMPLETE.md  OPTION3_IMPLEMENTATION_DETAILS.md  OPTION3_IMPLEMENTATION_GUIDE.md  OPTION3_QUICK_START.md  (+24 more)
Experimental/: CUDA_MEMORY_ALLOCATOR_DEEP_DIVE.md
Scripts/: all-cmake-format.sh  setup.py  setup_bazel.py  setup_git_hooks.py  valgrind_ctest.sh  xsigma_autograd_trace.json
bazel/: BUILD.bazel  xsigma.bzl
mypy_plugins/: check_mypy_version.py
(+861 files in other folders)
