###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module(
    name = "xsigma",
    version = "1.0.0",
)

# =============================================================================
# Core Bazel Rules
# =============================================================================

# C++ rules for building C++ libraries and binaries
bazel_dep(name = "rules_cc", version = "0.1.1")

# Python rules for Python bindings and tools
bazel_dep(name = "rules_python", version = "0.40.0")

# Platform definitions
bazel_dep(name = "platforms", version = "0.0.11")

# Bazel Skylib - common utilities
bazel_dep(name = "bazel_skylib", version = "1.7.1")

# =============================================================================
# Third-Party Dependencies
# =============================================================================

# Google Test - testing framework
bazel_dep(name = "googletest", version = "1.15.2")

# Abseil - C++ common libraries
bazel_dep(name = "abseil-cpp", version = "20240722.0", repo_name = "abseil")

# Google Flags - command-line flags library
bazel_dep(name = "gflags", version = "2.2.2")

# RE2 - regular expression library
bazel_dep(name = "re2", version = "2024-07-02")

# =============================================================================
# Local Third-Party Dependencies (in ThirdParty/ directory)
# =============================================================================
# These are defined as local repositories since they are vendored in the repo

# Note: For local third-party libraries, we use local_repository in WORKSPACE
# or define them directly in the build. Since WORKSPACE is disabled in Bazel 8,
# we need to use non_module_dependencies or define them as local modules.
# For now, we'll use the compatibility layer to enable WORKSPACE temporarily.

# Enable WORKSPACE file for local third-party dependencies
# This is a temporary solution until all dependencies are migrated to Bzlmod
bazel_dep(name = "bazel_features", version = "1.22.0")
